Add Dockerfile and workflows

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,17 @@ EXTERNAL_BASE_URL=https://altstore.example.com
 
 # Directory containing app IPA files (relative or absolute path)
 APPS_DIR=apps
+
+# Optional authentication token (if set, required as ?token=... query parameter)
+# Leave empty or comment out to disable authentication
+#AUTH_TOKEN=your-secret-token-here
+
+# Optional secret key for obfuscating IPA download URLs
+# When set, download URLs will use opaque tokens instead of revealing app names/filenames
+# Example: /download/abc123xyz instead of /apps/YourApp/app.ipa
+# The secret ensures tokens are unique to your server
+#
+# IMPORTANT SECURITY: When DOWNLOAD_SECRET is set, direct downloads via
+# /apps/:app/:filename are completely disabled (returns 403 Forbidden).
+# Only obfuscated /download/:token URLs will work.
+#DOWNLOAD_SECRET=your-random-secret-key-here
