--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,10 @@ dotenvy = "0.15"
 # CLI argument parsing
 clap = { version = "4.5", features = ["derive", "env"] }
 
+# Cryptography for token generation
+sha2 = "0.10"
+base64 = "0.22"
+
 [profile.release]
 opt-level = 3
 lto = true
